--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
   /* background-color: #f9f9f9; */
   background-color: white;
   padding-bottom: 30px;
+  margin-bottom: 60px; /* Margin bottom by footer height */
 
 
 }
@@ -17,11 +18,16 @@ body {
   padding-top: 25px;
 }
 
-html {
+/* html {
     min-height: 100%;
     position: relative;
-}
+} */
 
+
+html {
+  position: relative;
+  min-height: 100%;
+}
 
 .dynamicGallery {
   padding-top: 63px;
@@ -69,5 +75,5 @@ html {
   padding-top:40px;
 }
 .lead{
-  font-size: 25px;
+  font-size: 28px;
 }
