look mom no hands

--- a/css/starter-template.css
+++ b/css/starter-template.css
@@ -1,7 +1,15 @@
 body {
-  padding-top: 3.5rem;
+  padding-top: 4rem;
 }
 .starter-template {
   padding: 3rem 1.5rem;
   text-align: center;
+}
+.mainHeader {
+  font-size: 42px;
+  padding-top:50px;
+}
+
+.lead{
+  font-size: 32px;
 }
