adding wedding landing page

--- a/css/style.css
+++ b/css/style.css
@@ -85,3 +85,8 @@ a img {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
+#weddingContactForm {
+  padding:50px;
+  background-color:#ecf0f1;
+  }
